--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/13_buttercorncup/13_36.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/13_buttercorncup/13_36.yaml
@@ -5,7 +5,7 @@ step_annotations:
 - description: Measure-Measure 2 cups of frozen corn
   end_time: 166.06
   errors:
-  - description: Measure-Measure 2 cups of frozen corn. Spilling the corn while measuring
+  - description: Spilling the corn while measuring
     tag: Technique Error
   modified_description: Measure-Measure 2 cups of frozen corn. Spilling the corn while
     measuring
@@ -15,19 +15,14 @@ step_annotations:
     cold water
   end_time: 225.86
   errors:
-  - description: Thaw-Thaw the frozen corn by putting in cup and making hand as lid.
-      Put running cold water on cup. Spillage of corn occurs.
+  - description: Do not use sieve. Use cup and hand as lid.
+    tag: Preparation Error
+  - description: Spilling while thawing
     tag: Technique Error
-  modified_description: Thaw-Thaw the frozen corn by putting in cup and making hand
-    as lid. Put running cold water on cup. Spillage of corn occurs.
   start_time: 188.62245264691654
   step_id: 137
 - description: Add-Add the corn into a microwave-safe bowl
   end_time: 257.499
-  errors:
-  - description: Add-Add the corn into a microwave-safe small glass.
-    tag: Preparation Error
-  modified_description: Add-Add the corn into a microwave-safe small glass.
   start_time: 252.07608879081016
   step_id: 132
 - description: Microwave-Microwave the corn for 2 minutes
@@ -36,8 +31,7 @@ step_annotations:
   - description: Microwave-Microwave the corn. Timer started from 20 minutes and stopped
       at 16:16. Did for 3:44 minutes.
     tag: Timing Error
-  - description: Microwave-Microwave the corn. Timer started from 20 minutes and stopped
-      at 16:16. Did for 3:44 minutes. While removing from microwave did not use gloves
+  - description: Did not use gloves while removing from microwave
     tag: Preparation Error
   modified_description: Microwave-Microwave the corn. Timer started from 20 minutes
     and stopped at 16:16. Did for 3:44 minutes. While removing from microwave did
@@ -47,11 +41,7 @@ step_annotations:
 - description: Add-1 teaspoon of pepper powder to the bowl
   end_time: 580.598
   errors:
-  - description: Add-1 teaspoon of oregano powder to the bowl. Spilling the oregano
-      also happened.
-    tag: Technique Error
-  - description: Add-1 teaspoon of oregano powder to the bowl. Spilling the oregano
-      also happened.
+  - description: used oregano instead of pepper powder
     tag: Preparation Error
   modified_description: Add-1 teaspoon of oregano powder to the bowl. Spilling the
     oregano also happened.
@@ -60,7 +50,7 @@ step_annotations:
 - description: Add-Add 1 teaspoon of softened butter
   end_time: 598.851
   errors:
-  - description: Add-Add 1 teaspoon of vegetable oil.
+  - description: Add-Add 1 teaspoon of vegetable oil instead of butter
     tag: Preparation Error
   modified_description: Add-Add 1 teaspoon of vegetable oil.
   start_time: 588.336
@@ -68,20 +58,13 @@ step_annotations:
 - description: Add-Add 1 teaspoon salt to the bowl
   end_time: 653.005
   errors:
-  - description: Add-Add 1 teaspoon sugar to the bowl
+  - description: Add-Add 1 teaspoon sugar to the bowl instead of salt
     tag: Preparation Error
   modified_description: Add-Add 1 teaspoon sugar to the bowl
   start_time: 646.7055519322853
   step_id: 136
 - description: add-add lime juice to the bowl
   end_time: 626.667
-  errors:
-  - description: add-add lime juice extract from the bottle to the bowl. Did not take
-      the lemon and directly took bottled product. It happened before adding sugar.
-    tag: Order Error
-  modified_description: add-add lime juice extract from the bottle to the bowl. Did
-    not take the lemon and directly took bottled product. It happened before adding
-    sugar.
   start_time: 619.7594872684401
   step_id: 128
 - description: Mix-Mix the contents of the bowl well
@@ -96,13 +79,25 @@ step_annotations:
   step_id: 76
 - description: stir-then stir the bowl
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 135
 - description: Microwave-Microwave the corn for 3 more minutes
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 134
 - description: Extract-Extract lime juice from 1/3 lime
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 131
