--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/13_buttercorncup/13_41.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/13_buttercorncup/13_41.yaml
@@ -9,27 +9,14 @@ step_annotations:
 - description: Thaw-Thaw the frozen corn by putting it in a sieve and running it under
     cold water
   end_time: 222.811
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 106.98400000000001
   step_id: 137
 - description: Add-Add the corn into a microwave-safe bowl
   end_time: 264.862
-  errors:
-  - description: spillage while adding
-    tag: Technique Error
-  - description: Step performed before correct order
-    tag: Order Error
-  modified_description: Add-Add the corn into a microwave-safe bowl and spill some
-    while adding
   start_time: 252.15468391777512
   step_id: 132
 - description: Microwave-Microwave the corn for 2 minutes
   end_time: 406.304
-  errors:
-  - description: Step performed after correct order
-    tag: Order Error
   start_time: 276.48539903264816
   step_id: 133
 - description: Add-1 teaspoon of pepper powder to the bowl
@@ -38,9 +25,6 @@ step_annotations:
   - description: spilled some pepper into corn bowl while measuring leading to adding
       extra pepper
     tag: Technique Error
-  - description: spilled some pepper into corn bowl while measuring leading to adding
-      extra pepper
-    tag: Measurement Error
   modified_description: Add-1 teaspoon of pepper powder to the bowl and spill some
     while measuring in to the bowl.
   start_time: 436.058
@@ -50,7 +34,7 @@ step_annotations:
   errors:
   - description: directly extract lime juice to the bowl. so next step becomes obselete
     tag: Other
-  - description: Step performed after correct order
+  - description: Step performed before microwave for 3 minutes
     tag: Order Error
   modified_description: Extract-Extract lime juice from 1/3 lime directly into the
     bowl
@@ -61,7 +45,7 @@ step_annotations:
   errors:
   - description: this step is included into the above step
     tag: Other
-  - description: Step performed before correct order
+  - description: Step performed before microwave for 3 minutes
     tag: Order Error
   modified_description: add-add lime juice to the bowl
   start_time: 455.647
@@ -69,38 +53,33 @@ step_annotations:
 - description: Add-Add 1 teaspoon of softened butter
   end_time: 605.937
   errors:
-  - description: Step performed before correct order
+  - description: Step performed after adding lime juice
     tag: Order Error
   start_time: 571.7718051995164
   step_id: 138
 - description: stir-then stir the bowl
   end_time: 648.068
   errors:
-  - description: Step performed before correct order
+  - description: Step performed after adding lime juice
     tag: Order Error
   start_time: 613.7975858524788
   step_id: 135
 - description: Microwave-Microwave the corn for 3 more minutes
   end_time: 841.303
   errors:
-  - description: Step performed before correct order
+  - description: Step performed after adding lime juice
     tag: Order Error
   start_time: 654.7174249093108
   step_id: 134
 - description: Add-Add 1 teaspoon salt to the bowl
   end_time: 878.164
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 852.6809706166867
   step_id: 136
 - description: Mix-Mix the contents of the bowl well
   end_time: 901.66
   errors:
-  - description: spilled some corn out
+  - description: spilled some corn while mixing
     tag: Technique Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: Mix-Mix the contents of the bowl well and spill some corn
     out while stirring
   start_time: 882.5413937122129
