--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/13_buttercorncup/13_45.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/13_buttercorncup/13_45.yaml
@@ -16,8 +16,6 @@ step_annotations:
   errors:
   - description: Thaw under hot water
     tag: Temperature Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: Thaw-Thaw the frozen corn by putting it in a sieve and running
     it under hot water
   start_time: 94.67312671722642
@@ -25,8 +23,8 @@ step_annotations:
 - description: Add-Add the corn into a microwave-safe bowl
   end_time: 162.52220086457203
   errors:
-  - description: Step performed before correct order
-    tag: Order Error
+  - description: Spilling while adding corn to a microwave-safe bowl
+    tag: Technique Error
   start_time: 145.954
   step_id: 132
 - description: Microwave-Microwave the corn for 2 minutes
@@ -34,16 +32,11 @@ step_annotations:
   errors:
   - description: Microwave for 1 minute 30 seconds
     tag: Timing Error
-  - description: Step performed after correct order
-    tag: Order Error
   modified_description: Microwave-Microwave the corn for 1 minute 30 seconds
   start_time: 168.83374264572046
   step_id: 133
 - description: Add-Add 1 teaspoon of softened butter
   end_time: 330.56700078764896
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 302.9540054951246
   step_id: 138
 - description: Add-1 teaspoon of pepper powder to the bowl
@@ -55,7 +48,7 @@ step_annotations:
   errors:
   - description: Add 1.5 tsp
     tag: Measurement Error
-  - description: Step performed before correct order
+  - description: Step performed before microwaving
     tag: Order Error
   modified_description: Add-Add 1.5 teaspoon salt to the bowl
   start_time: 390.526647708559
@@ -63,7 +56,7 @@ step_annotations:
 - description: Microwave-Microwave the corn for 3 more minutes
   end_time: 619.3200372751896
   errors:
-  - description: Step performed before correct order
+  - description: Step performed after adding salt and before stirring
     tag: Order Error
   start_time: 427.606955672806
   step_id: 134
@@ -72,7 +65,7 @@ step_annotations:
   errors:
   - description: Spill some lime juice
     tag: Technique Error
-  - description: Step performed after correct order
+  - description: Step performed after adding salt and before stirring
     tag: Order Error
   modified_description: Extract-Extract (and spill) lime juice from 1/3 lime
   start_time: 674.5460278602383
@@ -80,7 +73,7 @@ step_annotations:
 - description: add-add lime juice to the bowl
   end_time: 684.269
   errors:
-  - description: Step performed before correct order
+  - description: Step performed after adding salt and before stirring
     tag: Order Error
   start_time: 675.169
   step_id: 128
@@ -89,15 +82,12 @@ step_annotations:
   errors:
   - description: Do not stir enough
     tag: Technique Error
-  - description: Step performed before correct order
+  - description: Step performed after adding salt and microwaving
     tag: Order Error
   modified_description: stir-stir the contents in bowl 2 times
   start_time: 692.6917104810401
   step_id: 135
 - description: Mix-Mix the contents of the bowl well
   end_time: 721.616
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 713.993163992416
   step_id: 76
