--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/8_spicedhotchocolate/8_45.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/8_spicedhotchocolate/8_45.yaml
@@ -5,7 +5,7 @@ step_annotations:
 - description: Fill-Fill a microwave-safe mug with skimmed milk
   end_time: 38.89748798448269
   errors:
-  - description: Spill
+  - description: Spill while filling the mug
     tag: Technique Error
   modified_description: Fill-Fill a microwave-safe mug with skimmed milk but spill
   start_time: 4.4823636849839446
@@ -13,9 +13,9 @@ step_annotations:
 - description: Add-Add 2 pieces of chocolate to the mug
   end_time: 61.9980508704476
   errors:
-  - description: Added fewer pieces than needed
+  - description: Add 1 piece of chocolate to the mug
     tag: Measurement Error
-  - description: Step performed before correct order
+  - description: Step performed before microwaving
     tag: Order Error
   modified_description: Add-Add 1 piece of chocolate to the mug
   start_time: 39.13320801393131
@@ -23,9 +23,9 @@ step_annotations:
 - description: Add-Add 1/5 teaspoon cinnamon to the mug
   end_time: 97.12033525829222
   errors:
-  - description: Added cumin
+  - description: Added cumin instead of cinnamon
     tag: Preparation Error
-  - description: Step performed before correct order
+  - description: Step performed before microwaving
     tag: Order Error
   modified_description: Add-Add 1/5 teaspoon cinnamon to the mug
   start_time: 61.9980508704476
@@ -35,15 +35,17 @@ step_annotations:
   errors:
   - description: Added salt instead of sugar
     tag: Preparation Error
+  - description: Step performed before microwaving
+    tag: Order Error
   modified_description: Add-Add 1 teaspoon of salt to the mug
   start_time: 97.12033525829222
   step_id: 87
 - description: Microwave-Microwave the contents of the mug for 1 minute
   end_time: 254.5813149299714
   errors:
-  - description: Microwaved for longer than specified
+  - description: Microwave the contents of the mug for 2 minutes
     tag: Timing Error
-  - description: Step performed after correct order
+  - description: Step performed after adding cinnamon and sugar
     tag: Order Error
   modified_description: Microwave-Microwave the contents of the mug for 2 minutes
   start_time: 120.92805823260298
@@ -53,14 +55,13 @@ step_annotations:
   errors:
   - description: Used lower power than specified
     tag: Temperature Error
-  - description: Microwaved for 61 seconds
-    tag: Timing Error
-  - description: Step performed before correct order
-    tag: Order Error
-  modified_description: Heat-Heat the contents of the mug for 61 seconds and serve
   start_time: 260.23859563673835
   step_id: 83
 - description: Mix-Mix the contents of the mug
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 85
